<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="125dp"
        android:id="@+id/itemIView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/foto"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/itemETNombre"
        android:id="@+id/TVNombre"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/itemIView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemETTelefono"
        android:id="@+id/TVTelefono"
        android:layout_below="@+id/TVNombre"
        android:layout_toEndOf="@+id/itemIView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemETDireccion"
        android:id="@+id/TVDireccion"
        android:layout_below="@+id/TVTelefono"
        android:layout_toEndOf="@+id/itemIView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemETEmail"
        android:id="@+id/TVEmail"
        android:layout_below="@+id/TVDireccion"
        android:layout_toEndOf="@+id/itemIView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemEDWeb"
        android:id="@+id/TVWeb"
        android:layout_below="@+id/TVEmail"
        android:layout_toEndOf="@+id/itemIView" />

</RelativeLayout>