<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="125dp"
        android:id="@+id/IDcrearIV"
        android:src="@drawable/foto"
        android:onClick="btnFoto"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/crearNombre"
        android:id="@+id/IDcrearNombre"
        android:layout_below="@+id/IDcrearIV"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/IDetCrearNombre"
        android:layout_below="@+id/IDcrearNombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/crearTVtelefono"
        android:id="@+id/IDtvCrearTelefono"
        android:layout_below="@+id/IDetCrearNombre"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/IDetCrearTelefono"
        android:layout_below="@+id/IDtvCrearTelefono"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:maxLength="9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/crearDireccion"
        android:id="@+id/IDtvCrearDireccion"
        android:layout_below="@+id/IDetCrearTelefono"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/IDetCrearDireccion"
        android:layout_below="@+id/IDtvCrearDireccion"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/crearEmail"
        android:id="@+id/IDtvCrearEmail"
        android:layout_below="@+id/IDetCrearDireccion"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/IDetCrearEmail"
        android:layout_below="@+id/IDtvCrearEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/crearWeb"
        android:id="@+id/IDtvCrearWeb"
        android:layout_below="@+id/IDetCrearEmail"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IDetCrearWeb"
        android:layout_below="@+id/IDtvCrearWeb"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/IDetCrearEmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/crearFoto"
        android:id="@+id/IDtvCrearFoto"
        android:layout_below="@+id/IDetCrearWeb"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IDetCrearFoto"
        android:layout_below="@+id/IDtvCrearFoto"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IDbtnCrearAltaContacto"
        android:id="@+id/IDbtnCrearAltaContacto"
        android:layout_below="@+id/IDetCrearFoto"
        android:layout_alignParentStart="true"
        android:onClick="btnCrear" />

</RelativeLayout>
</ScrollView>